--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -8,8 +8,7 @@
       "SourceDir": "src",
       "DistributionDir": "build",
       "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start",
-      "ServerlessContainers": true
+      "StartCommand": "npm run-script start"
     }
   },
   "providers": [
